padding fix on small screen

--- a/public/styles/landingpage.css
+++ b/public/styles/landingpage.css
@@ -324,7 +324,7 @@ div.col.col-sm-12.py-4.px-4 p:last-child {
     .carousel-item {
         min-height: 400px;
         text-align: center;
-        padding: 30px;
+        padding: 5px;
       }
       .custom-shadow{
         box-shadow: 1px 1px 10px rgb(188, 188, 188);
